Changes for 1.7
* Adding a visual cue for which moves are legal for Chess and other Grid games. (veqryn)

* Added movement validation logic for Chess. (veqryn)

* Upgrading the graphics for Grid Games, and including a mouse shadow of selected units, and a highlight of which units on map are currently selected. (veqryn)

* Major abstraction of both King's Table and Chess into a single framework for Grid based games. (veqryn)

* Completing most of UI aspect of Chess game. (veqryn)

* Creating framework for a Chess game. (veqryn)

* Created a notification to the user when they start a version of TripleA for the first time, showing the new features of this version. (veqryn)

* Created a notification to the user when they start TripleA that checks if their TripleA is the latest version, and if not asks them to update it. (veqryn)

* Created a notification to the user when they click "list games" that will alert them to which maps they already have which may be out of date and need updating. (veqryn)

* Added the default map downloader xml web link to the download maps feature, if the user does not already have any. (veqryn)

* Fixed movement validation bug that prevent loading of land units onto a transport during noncombat if the transport was in an enemy 'owned' sea zone. (veqryn)

* Fixed bug where units being transported or otherwise dependent were being counted towards unit presence and unit exclusion objectives. (veqryn)

* Changing territory attachment "occupiedTerrOf" into "originalOwner". (veqryn)

* Deleting game option property "Occupied Territories" since it does not do anything anymore. (veqryn)

* Created new territory effect attachment option, "unitsNotAllowed", which is a list of units that will be prevented from moving into any territories with this effect. (crystalct) 

* Adding ability to specify which round the game starts on, through a round offset in gameplay section of xml. (veqryn)
